# mcp-mimirs-bucket

./: .env  .gitignore  README.md  REFACTORING-SUMMARY.md  REFACTORING.md  arango_document_api.py  main.py  mcp_knowledge_db.py  pyproject.toml  update_embeddings.bat  update_embeddings.py  update_embeddings.sh
mimirs_bucket/: __init__.py  __main__.py  resources.py
mimirs_bucket/db/: __init__.py  client.py  models.py
mimirs_bucket/mcp/: __init__.py  server.py
mimirs_bucket/models/: __init__.py
mimirs_bucket/search/: __init__.py  embeddings.py  smart_search.py  vector_search.py
mimirs_bucket/tools/: __init__.py  document_tools.py  search_tools.py  tag_tools.py  topic_tools.py
mimirs_bucket/utils/: __init__.py  config.py  log_utils.py  logging.py
scripts/: setup.bat  setup.sh  update_embeddings.py
search/: __init__.py  mcp_tools.py  smart_search.py  vector_search.py
