[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimirs-bucket"
version = "0.1.0"
description = "MCP server for a dynamic documentation knowledge base using ArangoDB"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Siete Frouws", email = "scfrouws@gmail.com"},
    {name = "Jan Frouws", email = "janfrouws@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.2.0",
    "python-arango>=7.5.0",
    "python-dotenv>=1.0.0",
    "mcp[cli]>=1.2.0",
    "sentence-transformers>=2.2.2",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.1.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/siete-F/mcp-mimirs-bucket"
"Bug Tracker" = "https://github.com/siete-F/mcp-mimirs-bucket/issues"

[tool.hatch.build.targets.wheel]
packages = ["mcp_knowledge_db"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["arango.*"]
ignore_missing_imports = true

[tool.pytest]
testpaths = ["tests"]
